--- a/src/pages/locations/index.astro
+++ b/src/pages/locations/index.astro
@@ -76,6 +76,7 @@ const paginationBaseUrl = search
                             href={`/locations/${loc.slug}`}
                             title={loc.name}
                             body={loc.description}
+                            isPublicLand={loc.isPublicLand}
                         />
                     ))}
                 </ul>
